--- a/NPCGener_Editor/MainWindow.xaml
+++ b/NPCGener_Editor/MainWindow.xaml
@@ -5,9 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NPCGener_Editor"
         mc:Ignorable="d"
-        Title="NPCGener Editor - Smoow" Height="500" Width="1000">
+        Title="NPCGener Editor - Smoow" Height="750" Width="1000"
+        ResizeMode="CanMinimize">
 
-    <Grid Margin="10">
+    <Grid Margin="10" Width="980" Height="465">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
@@ -20,56 +21,56 @@
 
 
 
-        <TextBox x:Name="text9" HorizontalAlignment="Left" Margin="146,8,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203" Grid.Row="1"/>
-        <Label Content="Formation&#xA;" HorizontalAlignment="Left" Margin="10,4,0,0" VerticalAlignment="Top" Width="131" Height="25" Grid.Row="1" FontWeight="Bold"/>
-        <TextBox x:Name="text10" HorizontalAlignment="Left" Margin="146,33,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203" Grid.Row="1"/>
-        <Label Content="StartX" HorizontalAlignment="Left" Margin="10,29,0,0" VerticalAlignment="Top" Width="131" Height="25" Grid.Row="1" FontWeight="Bold"/>
-        <TextBox x:Name="text11" HorizontalAlignment="Left" Margin="146,56,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203" Grid.Row="1"/>
-        <Label Content="StartY&#xA;" HorizontalAlignment="Left" Margin="10,52,0,0" VerticalAlignment="Top" Width="131" Height="25" Grid.Row="1" FontWeight="Bold"/>
-        <TextBox x:Name="text12" HorizontalAlignment="Left" Margin="146,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203" Grid.Row="1"/>
-        <Label Content="StartRange" HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top" Width="131" Height="25" Grid.Row="1" FontWeight="Bold"/>
-        <TextBox x:Name="text13" HorizontalAlignment="Left" Margin="146,99,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203" Grid.Row="1"/>
-        <Label Content="StartWait" HorizontalAlignment="Left" Margin="10,95,0,0" VerticalAlignment="Top" Width="131" Height="25" Grid.Row="1" FontWeight="Bold"/>
-        <TextBox x:Name="text14" HorizontalAlignment="Left" Margin="146,120,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203" Grid.Row="1"/>
-        <Label Content="DestX" HorizontalAlignment="Left" Margin="10,116,0,0" VerticalAlignment="Top" Width="131" Height="25" Grid.Row="1" FontWeight="Bold"/>
-        <TextBox x:Name="text15" HorizontalAlignment="Left" Margin="146,144,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203" Grid.Row="1"/>
-        <Label Content="DestY" HorizontalAlignment="Left" Margin="10,138,0,0" VerticalAlignment="Top" Width="131" Height="25" Grid.Row="1" FontWeight="Bold"/>
-        <TextBox x:Name="text16" HorizontalAlignment="Left" Margin="146,164,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203" Grid.Row="1"/>
-        <Label Content="DestRange" HorizontalAlignment="Left" Margin="10,158,0,0" VerticalAlignment="Top" Width="131" Height="25" Grid.Row="1" FontWeight="Bold"/>
-        <TextBox x:Name="text17" HorizontalAlignment="Left" Margin="146,187,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203" Grid.Row="1"/>
-        <Label Content="DestWait" HorizontalAlignment="Left" Margin="10,181,0,0" VerticalAlignment="Top" Width="131" Height="25" Grid.Row="1" FontWeight="Bold"/>
+        <TextBox x:Name="text9" HorizontalAlignment="Left" Margin="146,90,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="Formation&#xA;" HorizontalAlignment="Left" Margin="10,86,0,0" VerticalAlignment="Top" Width="131" Height="24" FontWeight="Bold"/>
+        <TextBox x:Name="text10" HorizontalAlignment="Left" Margin="146,114,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="StartX" HorizontalAlignment="Left" Margin="10,110,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
+        <TextBox x:Name="text11" HorizontalAlignment="Left" Margin="146,137,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="StartY&#xA;" HorizontalAlignment="Left" Margin="10,133,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
+        <TextBox x:Name="text12" HorizontalAlignment="Left" Margin="146,159,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="StartRange" HorizontalAlignment="Left" Margin="10,156,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
+        <TextBox x:Name="text13" HorizontalAlignment="Left" Margin="146,180,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="StartWait" HorizontalAlignment="Left" Margin="10,176,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
+        <TextBox x:Name="text14" HorizontalAlignment="Left" Margin="146,201,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="DestX" HorizontalAlignment="Left" Margin="10,197,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
+        <TextBox x:Name="text15" HorizontalAlignment="Left" Margin="146,225,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203" Grid.RowSpan="2"/>
+        <Label Content="DestY" HorizontalAlignment="Left" Margin="10,219,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold" Grid.RowSpan="2"/>
+        <TextBox x:Name="text16" HorizontalAlignment="Left" Margin="146,12,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203" Grid.Row="1"/>
+        <Label Content="DestRange" HorizontalAlignment="Left" Margin="10,6,0,0" VerticalAlignment="Top" Width="131" Height="25" Grid.Row="1" FontWeight="Bold"/>
+        <TextBox x:Name="text17" HorizontalAlignment="Left" Margin="146,36,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203" Grid.Row="1"/>
+        <Label Content="DestWait" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Width="131" Height="25" Grid.Row="1" FontWeight="Bold"/>
 
 
 
-        <TextBox x:Name="text1" HorizontalAlignment="Left" Margin="146,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
-        <Button x:Name="btn1" Click="SendDataToNPCGenerGeneric" Content="Adicionar" HorizontalAlignment="Left" Margin="381,180,0,0" VerticalAlignment="Top" Height="29" Width="99" Grid.Row="1"/>
-        <Label Content="Descrição" HorizontalAlignment="Left" Margin="10,6,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
-        <TextBox x:Name="text2" HorizontalAlignment="Left" Margin="146,40,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
-        <Label Content="MinuteGenerate" HorizontalAlignment="Left" Margin="10,36,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
-        <TextBox x:Name="text3" HorizontalAlignment="Left" Margin="146,65,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
-        <Label Content="MaxNumMob" HorizontalAlignment="Left" Margin="10,61,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
-        <TextBox x:Name="text4" HorizontalAlignment="Left" Margin="146,90,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
-        <Label Content="MinGroup" HorizontalAlignment="Left" Margin="10,86,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
-        <TextBox x:Name="text5" HorizontalAlignment="Left" Margin="146,115,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
-        <Label Content="MaxGroup" HorizontalAlignment="Left" Margin="10,111,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
-        <TextBox x:Name="text6" HorizontalAlignment="Left" Margin="146,140,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
-        <Label Content="Leader" HorizontalAlignment="Left" Margin="10,136,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
-        <TextBox x:Name="text7" HorizontalAlignment="Left" Margin="146,165,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
-        <Label Content="Follower" HorizontalAlignment="Left" Margin="10,161,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
-        <TextBox x:Name="text8" HorizontalAlignment="Left" Margin="146,188,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
-        <Label Content="RouteType" HorizontalAlignment="Left" Margin="10,184,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
-        <TextBox x:Name="totalMobs" Grid.Column="1" HorizontalAlignment="Left" Margin="138,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="42"/>
-        <Label Grid.Column="1" Content="Total de NPCs/MOBs:" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Button x:Name="btn2" Click="GenerateIndexForNPCGener" Content="Gerar Index" HorizontalAlignment="Left" Margin="381,142,0,0" VerticalAlignment="Top" Height="31" Width="99" Grid.Row="1"/>
-        <ListView x:Name="lst1" Margin="15,37,10,10" Grid.RowSpan="2" SelectionChanged="ListView_SelectionChanged" Grid.Column="1" >
-
-        </ListView>
-        <Button x:Name="btn3" Click="getInfoSelectedMob" Content="Editar" HorizontalAlignment="Left" Margin="381,39,0,0" VerticalAlignment="Top" Height="31" Width="99"/>
-        <Button x:Name="btn4" Click="saveEditInfo" Content="Salvar Alterações" HorizontalAlignment="Left" Margin="381,74,0,0" VerticalAlignment="Top" Height="30" Width="99"/>
-        <Button x:Name="btn5" Click="cleanData" Content="Limpar Dados" HorizontalAlignment="Left" Margin="381,109,0,0" VerticalAlignment="Top" Height="30" Width="99"/>
-        <Label Grid.Column="1" Content="Busca Rápida:" HorizontalAlignment="Left" Margin="210,5,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <TextBox x:Name="campoBusca" Grid.Column="1" HorizontalAlignment="Left" Margin="298,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="95"/>
-        <Button x:Name="btn6" Click="searchMob" Content="Buscar" HorizontalAlignment="Left" Margin="398,8,0,0" VerticalAlignment="Top" Height="21" Width="62" Grid.Column="1"/>
+        <TextBox x:Name="text1" HorizontalAlignment="Left" Margin="146,-112,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Button x:Name="btn1" Click="SendDataToNPCGenerGeneric" Content="Adicionar" HorizontalAlignment="Left" Margin="383,182,0,0" VerticalAlignment="Top" Height="29" Width="99"/>
+        <Label Content="Descrição" HorizontalAlignment="Left" Margin="10,-116,0,0" VerticalAlignment="Top" Width="131" Height="26" FontWeight="Bold"/>
+        <TextBox x:Name="text2" HorizontalAlignment="Left" Margin="146,-82,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="MinuteGenerate" HorizontalAlignment="Left" Margin="10,-86,0,0" VerticalAlignment="Top" Width="131" Height="26" FontWeight="Bold"/>
+        <TextBox x:Name="text3" HorizontalAlignment="Left" Margin="146,-56,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="MaxNumMob" HorizontalAlignment="Left" Margin="10,-60,0,0" VerticalAlignment="Top" Width="131" Height="24" FontWeight="Bold"/>
+        <TextBox x:Name="text4" HorizontalAlignment="Left" Margin="146,-32,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="MinGroup" HorizontalAlignment="Left" Margin="10,-36,0,0" VerticalAlignment="Top" Width="131" Height="26" FontWeight="Bold"/>
+        <TextBox x:Name="text5" HorizontalAlignment="Left" Margin="146,-7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="MaxGroup" HorizontalAlignment="Left" Margin="10,-11,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
+        <TextBox x:Name="text6" HorizontalAlignment="Left" Margin="146,18,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="Leader" HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
+        <TextBox x:Name="text7" HorizontalAlignment="Left" Margin="146,43,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="Follower" HorizontalAlignment="Left" Margin="10,39,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
+        <TextBox x:Name="text8" HorizontalAlignment="Left" Margin="146,66,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="203"/>
+        <Label Content="RouteType" HorizontalAlignment="Left" Margin="10,62,0,0" VerticalAlignment="Top" Width="131" Height="25" FontWeight="Bold"/>
+        <TextBox x:Name="totalMobs" Grid.Column="1" HorizontalAlignment="Left" Margin="138,-108,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="42"/>
+        <Label Grid.Column="1" Content="Total de NPCs/MOBs:" HorizontalAlignment="Left" Margin="10,-112,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Button x:Name="btn2" Click="GenerateIndexForNPCGener" Content="Gerar Index" HorizontalAlignment="Left" Margin="383,24,0,0" VerticalAlignment="Top" Height="31" Width="99" Background="#FFDDDDDD" Grid.Row="1"/>
+        <ListView x:Name="lst1" Margin="15,-80,30,-97" SelectionChanged="ListView_SelectionChanged" Grid.Column="1" Grid.RowSpan="2" />
+        <Button x:Name="btn3" Click="getInfoSelectedMob" Content="Editar" HorizontalAlignment="Left" Margin="381,-82,0,0" VerticalAlignment="Top" Height="30" Width="99"/>
+        <Button x:Name="btn4" Click="saveEditInfo" Content="Salvar Alterações" HorizontalAlignment="Left" Margin="381,-48,0,0" VerticalAlignment="Top" Height="30" Width="99"/>
+        <Button x:Name="btn5" Click="cleanData" Content="Limpar Dados" HorizontalAlignment="Left" Margin="381,-13,0,0" VerticalAlignment="Top" Height="30" Width="99"/>
+        <Label Grid.Column="1" Content="Busca Rápida:" HorizontalAlignment="Left" Margin="210,-112,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <TextBox x:Name="campoBusca" Grid.Column="1" HorizontalAlignment="Left" Margin="298,-108,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="95"/>
+        <Button x:Name="btn6" Click="searchMob" Content="Buscar" HorizontalAlignment="Left" Margin="398,-110,0,0" VerticalAlignment="Top" Height="22" Width="62" Grid.Column="1"/>
+        <Button x:Name="btn7" Click="deleteMob" Content="Remover" HorizontalAlignment="Left" Margin="383,219,0,0" VerticalAlignment="Top" Height="29" Width="99" Grid.RowSpan="2"/>
+        <TextBlock HorizontalAlignment="Left" Margin="12,184,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Ao alterar, salvar ou adicionar qualquer NPC/MOB, lembre-se de clicar no botão &quot;Gerar Index&quot;." VerticalAlignment="Top" Height="72" Width="470" FontSize="20" IsEnabled="False" TextAlignment="Center" FontWeight="Normal" Visibility="Visible"/>
 
 
 
